# webinfo2md

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
examples/: run_demo.sh
files/: INTEGRATION.md  cli_p2_additions.py  concurrent.py  config.py  factory.py  pipeline.py  playwright_crawler.py  test_concurrent.py  test_factory.py  test_playwright.py
files/files/: Makefile  pyproject_additions.toml  test_e2e_real.py  verify_local.sh
scripts/: verify_local.sh
src/webinfo2md/: __init__.py  __main__.py  cli.py  pipeline.py
src/webinfo2md/crawler/: __init__.py  base.py  factory.py  httpx_crawler.py  playwright_crawler.py
src/webinfo2md/extractor/: chunker.py  cleaner.py
src/webinfo2md/llm/: __init__.py  anthropic_client.py  base.py  concurrent.py  deepseek_client.py  factory.py  gemini_client.py  kimi_client.py  openai_client.py
src/webinfo2md/prompts/: templates.py
src/webinfo2md/utils/: config.py  logger.py  token_counter.py
src/webinfo2md/writer/: md_writer.py
tests/: __init__.py  test_chunker.py  test_cli.py  test_concurrent.py  test_e2e.py  test_e2e_real.py  test_factory.py  test_pipeline.py  test_playwright.py  test_writer.py
tests/fixtures/: interview_post.html
